src/test/deca/context/invalid/created/decl_class/redefinition_methode_badType.deca
// Description :
//    redéfinition signature différent type
// Resultats :
//		Erreur contextuelle
//    	Ligne 12 : (2.7) La signature diffère de la méthode redéfinie

class A{
void meth(int x){}
}

class B extends A{
void meth(float x){}
}